--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hangman</title>
     <script src="script.js"></script>
     <script src="reloadSelectBox.js"></script>
     <link rel="stylesheet" href="style.css">
